# c-tetris

./: CMakeLists.txt  Makefile  README.md  toolchain-mingw64.cmake
include/: audio.h  game.h  input.h  renderer.h
src/: audio.c  game.c  input.c  main.c  renderer.c
